# egaku

./: CLAUDE.md  Cargo.build-spec.json  Cargo.nix  Cargo.toml  README.md  flake.nix
src/: focus.rs  input.rs  keymap.rs  layout.rs  lib.rs  list.rs  modal.rs  picker.rs  scroll.rs  split.rs  tabs.rs  theme.rs
